--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^25.0.0",
     "nuxt": "^3.14.1592",
+    "three": "^0.171.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "sass": "^1.82.0"
   }
 }
